--- a/index.html
+++ b/index.html
@@ -30,12 +30,9 @@
 
     </div>
 
-    <div id="lapTime">
-        <ol>
-            <li>12 : 34 : 56</li>
-            <li>78 : 90 : 12</li>
-        </ol>
+    <div id="lapTimeContainer">
+        <ol id="displayLapTime"></ol>
     </div>
-
+    <script src="index.js"></script>
 </body>
 </html>
